--- a/Playwright/JiraConnectionConfig.json
+++ b/Playwright/JiraConnectionConfig.json
@@ -1,5 +1,6 @@
 {
   "baseURL": "https://eloticksy.elo.com",
   "username": "J-H.Ruberg@elo.com",
-  "password": "XXX"
+  "password": "XXX",
+  "testExecutionKey": "QBSHR-66"
 }
